--- a/section_Results_subsection_Agregar_referencia__.tex
+++ b/section_Results_subsection_Agregar_referencia__.tex
@@ -1,2 +1,10 @@
 \section{Results}
-\subsection{} % Agregar referencia a paper de MS
+\subsection{Maps for Argentina}
+% Mapas
+% Hablar del gradiente
+\subsection{Zooming and detection of vulnerable communities}
+% Mapas
+% Histograma de porcentaje de vulnerabilidad por antena?
+% Cambios en los colores de los mapas (aclarar que el c{odigo de color cambia)
+% Deteccion de comunidades vulnerables
+
