--- a/section_Data_sources__.tex
+++ b/section_Data_sources__.tex
@@ -1,1 +1,5 @@
 \section{Data sources}
+\subsection{Argentina}
+\subsection{Mexico}
+
+% Si podemos reflotemos el grafico de clustering de provincias segun comunicaciones, y repitamos para estados en Mexico.
