--- a/section_Introduction__.tex
+++ b/section_Introduction__.tex
@@ -1,1 +1,43 @@
 \section{Introduction}
+
+Chagas is a 
+
+Aun despues de mas de 30 años de aplicar programas de control vectorial, el Mal de Chagas
+
+sigue siendo una enfermedad con altísima prevalencia en la Argentina. Según datos del
+
+Ministerio de Salud se estiman mas de un millón de personas infectadas y siete millones de
+
+individuos expuestos a esta enfermedad a nivel nacional. Hoy en día son especialmente
+
+relevantes el contagio por transfusión de sangre y el de madre a hijo durante el embarazo,
+
+estimándose que nacen cada año al menos 1300 niños infectados.
+
+Por otra parte, existen en la literatura varios trabajos (ver por ejemplo (6,7)) que analizan
+
+movimientos migratorios humanos a partir de registros de telefonía celular utilizando la
+
+geolocalización de las llamadas. Estos registros, llamados CDRs por sus siglas en inglés (Call
+
+Detail Record), también son utilizados para inferir propiedades y características sociales de
+
+cada usuario tales como la zona de residencia, el entorno social, las zonas por las que transita,
+
+su edad y género, etc.
+
+El objetivo de este trabajo consiste en generar una predicción para la localización de posibles
+
+infectados por el Trypanosoma cruzi (parásito causante del Mal de Chagas) a nivel nacional
+
+basada en un gran volumen de registros de llamados celulares. Estos datos serán utilizados
+
+para aportar información acerca de la dinámica social de la población Argentina, tanto a nivel
+
+2
+
+individual como a nivel agregado. Los datos contienen cinco meses de llamados desde
+
+noviembre de 2011 para mas de 40 millones de usuarios.
+
+1
