--- a/section_Introduction_Chagas_is_a__.tex
+++ b/section_Introduction_Chagas_is_a__.tex
@@ -1,6 +1,7 @@
 \section{Introduction}
 
-Chagas is a 
+Chagas is a global tropical parasitic disease mostly epidemic Latin America. WHO \ref{http://www.who.int/mediacentre/factsheets/fs340/en/} estimate more than 6 million infected people worldwide. Most transmissions occurs in the Americas via the \textit{Trypanosoma cruzi} parasite 
+
 
 Aun despues de mas de 30 años de aplicar programas de control vectorial, el Mal de Chagas
 
