--- a/section_Introduction_Chagas_is_a__.tex
+++ b/section_Introduction_Chagas_is_a__.tex
@@ -1,13 +1,9 @@
 \section{Introduction}
 
-Chagas is a global tropical parasitic disease mostly epidemic Latin America. WHO \ref{http://www.who.int/mediacentre/factsheets/fs340/en/} estimate more than 6 million infected people worldwide. Most transmissions occurs in the Americas via the \textit{Trypanosoma cruzi} parasite 
+Chagas is a global tropical parasitic disease mostly epidemic Latin America. WHO \ref{http://www.who.int/mediacentre/factsheets/fs340/en/} estimate more than six million infected people worldwide. Most transmissions occurs in the Americas via the \textit{Trypanosoma cruzi} parasite, vector-borne by the \textit{Triatomine} insect family.
 
-
-Aun despues de mas de 30 años de aplicar programas de control vectorial, el Mal de Chagas
-
-sigue siendo una enfermedad con altísima prevalencia en la Argentina. Según datos del
-
-Ministerio de Salud se estiman mas de un millón de personas infectadas y siete millones de
+In Argentina vector control campaigns have been ongoing for more than thirty years as the only epidemic counter-measure. National estimates still indicate that there exist at least one million people carrying the parasite with more than seven million exposed.
+Other relevant routes of transmission include blood transfusion and 
 
 individuos expuestos a esta enfermedad a nivel nacional. Hoy en día son especialmente
 
