--- a/section_Introduction_Chagas_is_a__.tex
+++ b/section_Introduction_Chagas_is_a__.tex
@@ -2,14 +2,11 @@
 
 Chagas is a global tropical parasitic disease mostly epidemic Latin America. WHO \ref{http://www.who.int/mediacentre/factsheets/fs340/en/} estimate more than six million infected people worldwide. Most transmissions occurs in the Americas via the \textit{Trypanosoma cruzi} parasite, vector-borne by the \textit{Triatomine} insect family.
 
-In Argentina vector control campaigns have been ongoing for more than thirty years as the only epidemic counter-measure. National estimates still indicate that there exist at least one million people carrying the parasite with more than seven million exposed.
-Other relevant routes of transmission include blood transfusion and 
+In Argentina vector control campaigns have been ongoing for more than thirty years as the main epidemic counter-measure. National estimates still indicate that there exist at least one million people carrying the parasite with more than seven million exposed.
+Other relevant routes of transmission include blood transfusion and congenital transmission, estimating 1300 newborns infected each year \ref{trabajos_de_}.\begin{comment}  en el drive estan las ppt del min salud \end{comment}
 
-individuos expuestos a esta enfermedad a nivel nacional. Hoy en día son especialmente
+The dynamic interaction of the triatomine infested areas and the human mobility patterns presents a difficult scenario to track down individuals or spots with high prevalence of infected people. Other than complex and costly individual screenings, the authyors of this work 
 
-relevantes el contagio por transfusión de sangre y el de madre a hijo durante el embarazo,
-
-estimándose que nacen cada año al menos 1300 niños infectados.
 
 Por otra parte, existen en la literatura varios trabajos (ver por ejemplo (6,7)) que analizan
 
@@ -30,8 +27,6 @@ infectados por el Trypanosoma cruzi (parásito causante del Mal de Chagas) a niv
 basada en un gran volumen de registros de llamados celulares. Estos datos serán utilizados
 
 para aportar información acerca de la dinámica social de la población Argentina, tanto a nivel
-
-2
 
 individual como a nivel agregado. Los datos contienen cinco meses de llamados desde
 
