--- a/section_Introduction_Chagas_is_a__.tex
+++ b/section_Introduction_Chagas_is_a__.tex
@@ -5,8 +5,11 @@ Chagas is a global tropical parasitic disease mostly epidemic Latin America. WHO
 In Argentina vector control campaigns have been ongoing for more than thirty years as the main epidemic counter-measure. National estimates still indicate that there exist at least one million people carrying the parasite with more than seven million exposed.
 Other relevant routes of transmission include blood transfusion and congenital transmission, estimating 1300 newborns infected each year \ref{trabajos_de_}.\begin{comment}  en el drive estan las ppt del min salud \end{comment}
 
-The dynamic interaction of the triatomine infested areas and the human mobility patterns presents a difficult scenario to track down individuals or spots with high prevalence of infected people. Other than complex and costly individual screenings, the authyors of this work 
+The dynamic interaction of the triatomine infested areas and the human mobility patterns present a difficult scenario to track down individuals or spots with high prevalence of infected people or high transmission risk. Available methods of surveying the state of the Chagas disease in Argentina nowadays re are limited to individual screenings of individuals. To the best of our knowledge the work described here is the first attempt to use mobile phone data to understand Chagas' epidemic spatial structure. \begin{comment}  Existe una forma de decir esto de manera correcta.. o asi les parece bien? \end{comment}
 
+Other works using mobile data to answer epidemiological or health answers 
+
+There exist different approaches in the literature \ref{}
 
 Por otra parte, existen en la literatura varios trabajos (ver por ejemplo (6,7)) que analizan
 
