--- a/section_Data_sources_subsection_Argentina__.tex
+++ b/section_Data_sources_subsection_Argentina__.tex
@@ -1,5 +1,8 @@
 \section{Data sources}
 \subsection{Argentina}
+
 \subsection{Mexico}
+
+The data consists of more than six billion phone CDRs covering a period of 19 months from January 2014 to September 2015. Provided by one of Mexico's biggest telecommunication (TelCo) companies, the data provides details for more than 8 million users that accessed the TelCo's network at some time. Note that this also includes users from other TelCos having been contacted by own clients. In persepective, 
 
 % Si podemos reflotemos el grafico de clustering de provincias segun comunicaciones, y repitamos para estados en Mexico.
