--- a/Procedimiento_Obtener_la_lista_de__.tex
+++ b/Procedimiento_Obtener_la_lista_de__.tex
@@ -28,6 +28,8 @@
     We also aggregated the total volume of outgoing calls from every antenna and from these we extracted every call that had a user whose home is in the endemic area as a receiver (\textit{vulnerable calls}).
     
     These four numbers are the indicators for each antenna in the studied country.
+
+% Reviewed up to here
 \subsection{Heatmap generation}
 
 		We generated heat maps from the processed data where each cell was represented by its communications with
