--- a/section_Introduction_Chagas_is_a__.tex
+++ b/section_Introduction_Chagas_is_a__.tex
@@ -1,14 +1,16 @@
 \section{Introduction}
 
-Chagas is a global tropical parasitic disease mostly epidemic Latin America. WHO \ref{http://www.who.int/mediacentre/factsheets/fs340/en/} estimate more than six million infected people worldwide. Most transmissions occurs in the Americas via the \textit{Trypanosoma cruzi} parasite, vector-borne by the \textit{Triatomine} insect family.
+Chagas is a global tropical parasitic disease mostly epidemic Latin America. WHO \ref{http://www.who.int/mediacentre/factsheets/fs340/en/} estimate more than six million infected people worldwide. Most transmissions occurs in the Americas via the \textit{Trypanosoma cruzi} parasite, vector-borne by the \textit{Triatomine} insect family. Other relevant routes of transmission include blood transfusion and congenital transmission, estimating 1300 newborns infected each year \ref{trabajos_de_}.\begin{comment}  en el drive estan las ppt del min salud \end{comment}. 
 
-In Argentina vector control campaigns have been ongoing for more than thirty years as the main epidemic counter-measure. National estimates still indicate that there exist at least one million people carrying the parasite with more than seven million exposed.
+Enduring chronically for years in the infected individual, Chagas can go for years without being detected. This in turn lowers the chance of effective treatment and of tracking of infected individuals. The spatial dissemination of a congenitally transmitted disease offset the available measures to control risk groups, 
 
-Other relevant routes of transmission include blood transfusion and congenital transmission, estimating 1300 newborns infected each year \ref{trabajos_de_}.\begin{comment}  en el drive estan las ppt del min salud \end{comment}
+In Argentina vector control campaigns have been ongoing for more than thirty years as the main epidemic counter-measure. \textit{Gran Chaco}, situated in the northern part of the country is home to most of the infected triatomines. The ecoregion's demographics are specially 
+
+Recent national estimates still indicate that there exist at least one million people carrying the parasite with more than seven million exposed. Experts \begin{comment}  aca como referencio a Diego Weinberg y Mundo Sano? \end{comment} underline the current difficulties faced by the national health systems where on average, only two thousand people are treated yearly for Chagas  \begin{comment}  aca nuevamente esta referencia es de MS \end{comment}. 
 
 The dynamic interaction of the triatomine infested areas and the human mobility patterns present a difficult scenario to track down individuals or spots with high prevalence of infected people or high transmission risk. Available methods of surveying the state of the Chagas disease in Argentina nowadays are limited to individual screenings of individuals. To the best of our knowledge the work described here is the first attempt to use mobile phone data to understand Chagas' epidemic spatial structure. \begin{comment}  Existe una forma de decir esto de manera correcta.. o asi les parece bien? \end{comment}
 
-There exist different approaches in the literature using using mobile data to answer epidemiological or health questions. \begin{comment} La siguiente info la saco de aqui  https://docs.google.com/document/d/1ZClgYFTLCxmg7wvRXqz2V1EP7Wcg0vd2ZwEBOLW2VOk \end{comment} \ref{}
+There exist different approaches in the literature making use of mobile data to answer epidemiological or health questions. \begin{comment} La siguiente info la saco de aqui  https://docs.google.com/document/d/1ZClgYFTLCxmg7wvRXqz2V1EP7Wcg0vd2ZwEBOLW2VOk \end{comment} \ref{}
 
 Por otra parte, existen en la literatura varios trabajos (ver por ejemplo (6,7)) que analizan
 
@@ -22,6 +24,7 @@ cada usuario tales como la zona de residencia, el entorno social, las zonas por 
 
 su edad y género, etc.
 
+
 El objetivo de este trabajo consiste en generar una predicción para la localización de posibles
 
 infectados por el Trypanosoma cruzi (parásito causante del Mal de Chagas) a nivel nacional
@@ -30,8 +33,9 @@ basada en un gran volumen de registros de llamados celulares. Estos datos serán
 
 para aportar información acerca de la dinámica social de la población Argentina, tanto a nivel
 
-individual como a nivel agregado. Los datos contienen cinco meses de llamados desde
+individual como a nivel agregado. 
 
-noviembre de 2011 para mas de 40 millones de usuarios.
+
+Public health policy and epidemiological campaigns could greatly benefit from the use of data of long-term national mobility patterns. To the best of our knowledge, data on the subject is vastly lacking, inexistent or . Here we explore use CDRs to  
 
 1
