--- a/section_Introduction_Chagas_is_a__.tex
+++ b/section_Introduction_Chagas_is_a__.tex
@@ -2,21 +2,19 @@
 
 Chagas is a global tropical parasitic disease mostly epidemic Latin America. WHO \ref{http://www.who.int/mediacentre/factsheets/fs340/en/} estimate more than six million infected people worldwide. Most transmissions occurs in the Americas via the \textit{Trypanosoma cruzi} parasite, vector-borne by the \textit{Triatomine} insect family. Other relevant routes of transmission include blood transfusion and congenital transmission, estimating 1300 newborns infected each year \ref{trabajos_de_}.\begin{comment}  en el drive estan las ppt del min salud \end{comment}. 
 
-Enduring chronically for years in the infected individual, Chagas can go for years without being detected. This in turn lowers the chance of effective treatment and of tracking of infected individuals. The spatial dissemination of a congenitally transmitted disease offset the available measures to control risk groups, 
+Enduring chronically for years in the infected individual, Chagas can last years without being detected. This in turn reduces the chance of effective treatment and the tracking of infected individuals. The spatial dissemination of a congenitally transmitted disease offsets the available measures to control risk groups and slowly introduce the disease to the general population. Long-term human mobility plays a key role in this process.
 
-In Argentina vector control campaigns have been ongoing for more than thirty years as the main epidemic counter-measure. \textit{Gran Chaco}, situated in the northern part of the country is home to most of the infected triatomines. The ecoregion's demographics are specially 
-
-Recent national estimates still indicate that there exist at least one million people carrying the parasite with more than seven million exposed. Experts \begin{comment}  aca como referencio a Diego Weinberg y Mundo Sano? \end{comment} underline the current difficulties faced by the national health systems where on average, only two thousand people are treated yearly for Chagas  \begin{comment}  aca nuevamente esta referencia es de MS \end{comment}. 
+In Argentina vector control campaigns have been ongoing for more than thirty years as the main epidemic counter-measure. \textit{Gran Chaco}, situated in the northern part of the country is home to most of the infected triatomines. The ecoregion's demographic characteristics are specially 
 
 The dynamic interaction of the triatomine infested areas and the human mobility patterns present a difficult scenario to track down individuals or spots with high prevalence of infected people or high transmission risk. Available methods of surveying the state of the Chagas disease in Argentina nowadays are limited to individual screenings of individuals. To the best of our knowledge the work described here is the first attempt to use mobile phone data to understand Chagas' epidemic spatial structure. \begin{comment}  Existe una forma de decir esto de manera correcta.. o asi les parece bien? \end{comment}
 
+Recent national estimates indicate that there exist at least one million people carrying the parasite with more than seven million exposed. Experts \begin{comment}  aca como referencio a Diego Weinberg y Mundo Sano? \end{comment} underline the current difficulties faced by the national health systems where on average, only two thousand people are treated yearly for Chagas  \begin{comment}  aca nuevamente esta referencia es de MS \end{comment}. 
+
 There exist different approaches in the literature making use of mobile data to answer epidemiological or health questions. \begin{comment} La siguiente info la saco de aqui  https://docs.google.com/document/d/1ZClgYFTLCxmg7wvRXqz2V1EP7Wcg0vd2ZwEBOLW2VOk \end{comment} \ref{}
 
-Por otra parte, existen en la literatura varios trabajos (ver por ejemplo (6,7)) que analizan
+Other works directly work on CDRs to characterize human mobility. Analyzing patterns of daily flow 
 
-movimientos migratorios humanos a partir de registros de telefonía celular utilizando la
 
-geolocalización de las llamadas. Estos registros, llamados CDRs por sus siglas en inglés (Call
 
 Detail Record), también son utilizados para inferir propiedades y características sociales de
 
@@ -25,17 +23,8 @@ cada usuario tales como la zona de residencia, el entorno social, las zonas por 
 su edad y género, etc.
 
 
-El objetivo de este trabajo consiste en generar una predicción para la localización de posibles
+Here we explore the use CDRs to predict population movements between the \textit{Gran Chaco} ecoregion to the rest of the country. Data is timestamped and geolocalizated by the position of the antenna used to place the call. Privacy is also ensured by identifying users by their hashed ID. \begin{comment}el tema de la privacidad es siempre tan importante que lo pongo aca... haria falta agregar que no tenemos acceso a las claves de encriptacion. \end{comment}
 
-infectados por el Trypanosoma cruzi (parásito causante del Mal de Chagas) a nivel nacional
-
-basada en un gran volumen de registros de llamados celulares. Estos datos serán utilizados
-
-para aportar información acerca de la dinámica social de la población Argentina, tanto a nivel
-
-individual como a nivel agregado. 
-
-
-Public health policy and epidemiological campaigns could greatly benefit from the use of data of long-term national mobility patterns. To the best of our knowledge, data on the subject is vastly lacking, inexistent or . Here we explore use CDRs to  
+Public health policy and epidemiological interventions could greatly benefit from the study of long-term national mobility patterns. Characterization of human movements to and from the ecoregion is key to the problem of targetting infected individuals at a national scale. To the best of our knowledge, data on the subject is vastly lacking, inexistent or hardly accesible to researchers. 
 
 1
