--- a/section_Introduction_Chagas_is_a__.tex
+++ b/section_Introduction_Chagas_is_a__.tex
@@ -10,9 +10,11 @@ The dynamic interaction of the triatomine infested areas and the human mobility 
 
 Recent national estimates indicate that there exist at least one million people carrying the parasite with more than seven million exposed. Experts \begin{comment}  aca como referencio a Diego Weinberg y Mundo Sano? \end{comment} underline the current difficulties faced by the national health systems where on average, only two thousand people are treated yearly for Chagas  \begin{comment}  aca nuevamente esta referencia es de MS \end{comment}. 
 
-There exist different approaches in the literature making use of mobile data to answer epidemiological or health questions. \begin{comment} La siguiente info la saco de aqui  https://docs.google.com/document/d/1ZClgYFTLCxmg7wvRXqz2V1EP7Wcg0vd2ZwEBOLW2VOk \end{comment} \ref{}
+There exist different approaches in the literature making use of mobile data to answer epidemiological or health questions. \begin{comment} La siguiente info la saco de aqui  https://docs.google.com/document/d/1ZClgYFTLCxmg7wvRXqz2V1EP7Wcg0vd2ZwEBOLW2VOk \end{comment} Brdar et al \ref{Brdar}
 
-Other works directly work on CDRs to characterize human mobility. Analyzing patterns of daily flow 
+
+Other works directly work on CDRs to characterize human mobility. Inferences patterns of daily flow 
+\footnote{A complete survey of mobile traffic analysis articles may be found in Fiore, Naboulsi, Ribot & Stanica's work \ref{mobile_survey} }
 
 
 
