--- a/section_Introduction_Chagas_is_a__.tex
+++ b/section_Introduction_Chagas_is_a__.tex
@@ -2,19 +2,18 @@
 
 Chagas is a global tropical parasitic disease mostly epidemic Latin America. WHO \ref{http://www.who.int/mediacentre/factsheets/fs340/en/} estimate more than six million infected people worldwide. Most transmissions occurs in the Americas via the \textit{Trypanosoma cruzi} parasite, vector-borne by the \textit{Triatomine} insect family. Other relevant routes of transmission include blood transfusion and congenital transmission, estimating 1300 newborns infected each year \ref{trabajos_de_}.\begin{comment}  en el drive estan las ppt del min salud \end{comment}. 
 
-Enduring chronically for years in the infected individual, Chagas can last years without being detected. This in turn reduces the chance of effective treatment and the tracking of infected individuals. The spatial dissemination of a congenitally transmitted disease offsets the available measures to control risk groups and slowly introduce the disease to the general population. Long-term human mobility plays a key role in this process.
+Enduring chronically in the infected individual, Chagas can last years without being detected. This in turn reduces the chance of effective treatment and the tracking of infected individuals. The spatial dissemination of a congenitally transmitted disease offsets the available measures to control risk groups and slowly introduce the disease to the general population. Long-term human mobility plays a key role in this process.
 
-In Argentina vector control campaigns have been ongoing for more than thirty years as the main epidemic counter-measure. \textit{Gran Chaco}, situated in the northern part of the country is home to most of the infected triatomines. The ecoregion's demographic characteristics are specially 
-
+In Argentina vector control campaigns have been ongoing for more than thirty years as the main epidemic counter-measure. \textit{Gran Chaco}, situated in the northern part of the country is home to most of the infected triatomines. The ecoregion's socio-demographic conditions aids the parasite's lifecycle. Domestic human, bug and animal interactions preserve the continuous development of new infection cases, specially in the poorer 
+ 
 The dynamic interaction of the triatomine infested areas and the human mobility patterns present a difficult scenario to track down individuals or spots with high prevalence of infected people or high transmission risk. Available methods of surveying the state of the Chagas disease in Argentina nowadays are limited to individual screenings of individuals. To the best of our knowledge the work described here is the first attempt to use mobile phone data to understand Chagas' epidemic spatial structure. \begin{comment}  Existe una forma de decir esto de manera correcta.. o asi les parece bien? \end{comment}
 
 Recent national estimates indicate that there exist at least one million people carrying the parasite with more than seven million exposed. Experts \begin{comment}  aca como referencio a Diego Weinberg y Mundo Sano? \end{comment} underline the current difficulties faced by the national health systems where on average, only two thousand people are treated yearly for Chagas  \begin{comment}  aca nuevamente esta referencia es de MS \end{comment}. 
 
-There exist different approaches in the literature making use of mobile data to answer epidemiological or health questions. \begin{comment} La siguiente info la saco de aqui  https://docs.google.com/document/d/1ZClgYFTLCxmg7wvRXqz2V1EP7Wcg0vd2ZwEBOLW2VOk \end{comment} Brdar et al \ref{Brdar}
-
+There exist different approaches in the literature making use of mobile data applied epidemiological or health problems. \begin{comment} La siguiente info la saco de aqui  https://docs.google.com/document/d/1ZClgYFTLCxmg7wvRXqz2V1EP7Wcg0vd2ZwEBOLW2VOk \end{comment} Amy Wesolowski et al \ref{Wesolowski} quantify the impact of human mobility on Malaria disease movement in Kenya with disease prevalence information;   Tizzoni et al \ref{Tizzoni} compare theoretical mobility models, models studied with CDRs and mobility census data to infer 
 
 Other works directly work on CDRs to characterize human mobility. Inferences patterns of daily flow 
-\footnote{A complete survey of mobile traffic analysis articles may be found in Fiore, Naboulsi, Ribot & Stanica's work \ref{mobile_survey} }
+\footnote{A complete survey of mobile traffic analysis articles may be found in Fiore, Naboulsi, Ribot & Stanica's work \ref{mobile_survey} are explored in sarraut
 
 
 
