--- a/section_Introduction_Chagas_is_a__.tex
+++ b/section_Introduction_Chagas_is_a__.tex
@@ -13,7 +13,7 @@ Recent national estimates indicate that there exist at least one million people 
 There exist different approaches in the literature making use of mobile data applied epidemiological or health problems. \begin{comment} La siguiente info la saco de aqui  https://docs.google.com/document/d/1ZClgYFTLCxmg7wvRXqz2V1EP7Wcg0vd2ZwEBOLW2VOk \end{comment} Amy Wesolowski et al \ref{Wesolowski} quantify the impact of human mobility on Malaria disease movement in Kenya with disease prevalence information;   Tizzoni et al \ref{Tizzoni} compare theoretical mobility models, models studied with CDRs and mobility census data to infer 
 
 Other works directly work on CDRs to characterize human mobility. Inferences patterns of daily flow 
-\footnote{A complete survey of mobile traffic analysis articles may be found in Fiore, Naboulsi, Ribot & Stanica's work \ref{mobile_survey} are explored in sarraut
+\footnote{A complete survey of mobile traffic analysis articles may be found in Fiore, Naboulsi, Ribot & Stanica's work \ref{mobile_survey} }are explored in sarraut
 
 
 
