--- a/section_Introduction_Chagas_is_a__.tex
+++ b/section_Introduction_Chagas_is_a__.tex
@@ -1,16 +1,16 @@
 \section{Introduction}
 
-Chagas is a global tropical parasitic disease mostly epidemic Latin America. WHO \ref{http://www.who.int/mediacentre/factsheets/fs340/en/} estimate more than six million infected people worldwide. Most transmissions occurs in the Americas via the \textit{Trypanosoma cruzi} parasite, vector-borne by the \textit{Triatomine} insect family. Other relevant routes of transmission include blood transfusion and congenital transmission, estimating 1300 newborns infected each year \ref{trabajos_de_}.\begin{comment}  en el drive estan las ppt del min salud \end{comment}. 
+Chagas' disease is a tropical parasitic epidemic of global reach, spread mostly across Latin America. The World Health Organization (WHO \ref{http://www.who.int/mediacentre/factsheets/fs340/en/}) estimates more than six million infected people worldwide. Most transmissions occur in the Americas via the \textit{Trypanosoma cruzi} parasite, vector-borne by the \textit{Triatomine} insect family. Other relevant routes of transmission include blood transfusion and congenital transmission, with an estimated 1300 newborns infected each year \ref{trabajos_de_}.\begin{comment}  en el drive estan las ppt del min salud \end{comment}. 
 
-Enduring chronically in the infected individual, Chagas can last years without being detected. This in turn reduces the chance of effective treatment and the tracking of infected individuals. The spatial dissemination of a congenitally transmitted disease offsets the available measures to control risk groups and slowly introduce the disease to the general population. Long-term human mobility plays a key role in this process.
+Enduring chronically in the infected individual, Chagas' disease can last years without being detected. This in turn reduces the chance of effective treatment and tracking of infected individuals. Spatial dissemination of a congenitally transmitted disease sidesteps the available measures to monitor risk groups, slowly introducing the infection in the general population. Long-term human mobility plays a key role in this process.
 
-In Argentina vector control campaigns have been ongoing for more than thirty years as the main epidemic counter-measure. \textit{Gran Chaco}, situated in the northern part of the country is home to most of the infected triatomines. The ecoregion's socio-demographic conditions aids the parasite's lifecycle. Domestic human, bug and animal interactions preserve the continuous development of new infection cases, specially in the poorer 
+In Argentina, vector control campaings have been the main epidemic counter-measure for more than thirty years. The \textit{Gran Chaco}, situated in the northern part of the country, is home to most of the infected triatomines. The ecoregion's poor socio-demographic conditions further supports the parasite's lifecycle. Human, bug and animal domestic interactions foster the continuous appearance of new infection cases, particularly among the poorest.
  
-The dynamic interaction of the triatomine infested areas and the human mobility patterns present a difficult scenario to track down individuals or spots with high prevalence of infected people or high transmission risk. Available methods of surveying the state of the Chagas disease in Argentina nowadays are limited to individual screenings of individuals. To the best of our knowledge the work described here is the first attempt to use mobile phone data to understand Chagas' epidemic spatial structure. \begin{comment}  Existe una forma de decir esto de manera correcta.. o asi les parece bien? \end{comment}
+The dynamic interaction of the triatomine infested areas with human mobility patterns present a difficult scenario to track down individuals or spots with high prevalence of infected people or transmission risk. Available methods of surveying the state of Chagas' disease in Argentina nowadays are limited to individual screenings of individuals. Here, we aim at using mobile phone data in order to understand Chagas' epidemic spatial structure.
 
-Recent national estimates indicate that there exist at least one million people carrying the parasite with more than seven million exposed. Experts \begin{comment}  aca como referencio a Diego Weinberg y Mundo Sano? \end{comment} underline the current difficulties faced by the national health systems where on average, only two thousand people are treated yearly for Chagas  \begin{comment}  aca nuevamente esta referencia es de MS \end{comment}. 
+Recent national estimates indicate that there exist at least one million people carrying the parasite, with more than seven million exposed. Experts \begin{comment}  aca como referencio a Diego Weinberg y Mundo Sano? \end{comment} underline the current difficulties faced by the national health systems, where on average only two thousand people are treated yearly for Chagas' disease.  \begin{comment}  aca nuevamente esta referencia es de MS \end{comment}. 
 
-There exist different approaches in the literature making use of mobile data applied epidemiological or health problems. \begin{comment} La siguiente info la saco de aqui  https://docs.google.com/document/d/1ZClgYFTLCxmg7wvRXqz2V1EP7Wcg0vd2ZwEBOLW2VOk \end{comment} Amy Wesolowski et al \ref{Wesolowski} quantify the impact of human mobility on Malaria disease movement in Kenya with disease prevalence information;   Tizzoni et al \ref{Tizzoni} compare theoretical mobility models, models studied with CDRs and mobility census data to infer 
+There exist different approaches in the literature that use mobile phone data to study epidemiological or health problems. \begin{comment} La siguiente info la saco de aqui  https://docs.google.com/document/d/1ZClgYFTLCxmg7wvRXqz2V1EP7Wcg0vd2ZwEBOLW2VOk \end{comment} Amy Wesolowski et al \ref{Wesolowski} quantify the impact of human mobility on Malaria disease movement in Kenya through disease prevalence information; Tizzoni et al \ref{Tizzoni} compare theoretical mobility models, models studied with Call Detail Records (CDRs), and mobility census data to infer 
 
 Other works directly work on CDRs to characterize human mobility. Inferences patterns of daily flow 
 \footnote{A complete survey of mobile traffic analysis articles may be found in Fiore, Naboulsi, Ribot & Stanica's work \ref{mobile_survey} }are explored in sarraut
@@ -24,7 +24,7 @@ cada usuario tales como la zona de residencia, el entorno social, las zonas por 
 su edad y género, etc.
 
 
-Here we explore the use CDRs to predict population movements between the \textit{Gran Chaco} ecoregion to the rest of the country. Data is timestamped and geolocalizated by the position of the antenna used to place the call. Privacy is also ensured by identifying users by their hashed ID. \begin{comment}el tema de la privacidad es siempre tan importante que lo pongo aca... haria falta agregar que no tenemos acceso a las claves de encriptacion. \end{comment}
+Here we explore the use CDRs to predict population movements between the \textit{Gran Chaco} ecoregion to the rest of the country, thus providing a proxy for the epidemic spread. Data is timestamped and geolocalizated by the position of the antenna used to place the call. Privacy is ensured by identifying users by their hashed ID. \begin{comment}el tema de la privacidad es siempre tan importante que lo pongo aca... haria falta agregar que no tenemos acceso a las claves de encriptacion. \end{comment}
 
 Public health policy and epidemiological interventions could greatly benefit from the study of long-term national mobility patterns. Characterization of human movements to and from the ecoregion is key to the problem of targetting infected individuals at a national scale. To the best of our knowledge, data on the subject is vastly lacking, inexistent or hardly accesible to researchers. 
 
