--- a/section_Introduction_Chagas_disease_is__.tex
+++ b/section_Introduction_Chagas_disease_is__.tex
@@ -1,14 +1,14 @@
 \section{Introduction}
 
-Chagas' disease is a tropical parasitic epidemic of global reach, spread mostly across Latin America. The World Health Organization (WHO \ref{http://www.who.int/mediacentre/factsheets/fs340/en/}) estimates more than six million infected people worldwide. Most transmissions occur in the Americas via the \textit{Trypanosoma cruzi} parasite, vector-borne by the \textit{Triatomine} insect family. Other relevant routes of transmission include blood transfusion and congenital transmission, with an estimated 1300 newborns infected each year \ref{trabajos_de_}.\begin{comment}  en el drive estan las ppt del min salud \end{comment}. 
+Chagas' disease is a tropical parasitic epidemic of global reach, spread mostly across Latin America. The World Health Organization (WHO \ref{http://www.who.int/mediacentre/factsheets/fs340/en/}) estimates more than six million infected people worldwide. Most transmissions occur in the Americas via the \textit{Trypanosoma cruzi} parasite, vector-borne by the \textit{Triatomine} insect family. In recent years and due to globalization and migrations, the disease has become a health issue in other continents, particularly in Europe. 
 
-Enduring chronically in the infected individual, Chagas' disease can last years without being detected. This in turn reduces the chance of effective treatment and tracking of infected individuals. Spatial dissemination of a congenitally transmitted disease sidesteps the available measures to monitor risk groups, slowly introducing the infection in the general population. Long-term human mobility plays a key role in this process.
+Relevant routes of transmission also include blood transfusion and congenital transmission, estimating 1300 newborns infected each year \ref{trabajos_de_}.\begin{comment}  en el drive estan las ppt del min salud \end{comment}. The diseases endures chronically in the infected individual, lasting for years without being detected. This characteristic vastly reduces the chance of effective treatment and the tracking of infected individuals. Also, the spatial dissemination of a congenitally transmitted disease offsets the available measures to control risk groups and slowly introduces the disease to the general population. In this process, long-term human mobility plays a key role.
 
-In Argentina, vector control campaings have been the main epidemic counter-measure for more than thirty years. The \textit{Gran Chaco}, situated in the northern part of the country, is home to most of the infected triatomines. The ecoregion's poor socio-demographic conditions further supports the parasite's lifecycle. Human, bug and animal domestic interactions foster the continuous appearance of new infection cases, particularly among the poorest.
- 
-The dynamic interaction of the triatomine infested areas with human mobility patterns present a difficult scenario to track down individuals or spots with high prevalence of infected people or transmission risk. Available methods of surveying the state of Chagas' disease in Argentina nowadays are limited to individual screenings of individuals. Here, we aim at using mobile phone data in order to understand Chagas' epidemic spatial structure.
+In Argentina vector control campaigns have been ongoing for more than thirty years as the main epidemic counter-measure.The \textit{Gran Chaco}, situated in the northern part of the country, is home to most of the infected triatomines. The ecoregion's low socio-demographic conditions further supports the parasite's lifecycle, where human, bug and animal domestic interactions foster the appearance of new infection cases, particularly among the poorest. The ecoregion as of today is hyperendemic for the disease.
 
-Recent national estimates indicate that there exist at least one million people carrying the parasite, with more than seven million exposed. Experts \begin{comment}  aca como referencio a Diego Weinberg y Mundo Sano? \end{comment} underline the current difficulties faced by the national health systems, where on average only two thousand people are treated yearly for Chagas' disease.  \begin{comment}  aca nuevamente esta referencia es de MS \end{comment}. 
+The dynamic interaction of the triatomine infested areas and the human mobility patterns present a difficult scenario to track down individuals or spots with high prevalence of infected people or  transmission risk. Available methods of surveying the state of the Chagas disease in Argentina nowadays are limited to individual screenings of individuals. To the best of our knowledge the work described here is the first attempt to use mobile phone data to correlate migrations and cellphone usage to understand Chagas’ epidemic spatial structure.
+
+Recent national estimates indicate that there exist at least one million people carrying the parasite with more than seven million exposed. Experts \begin{comment}  aca como referencio a Diego Weinberg y Mundo Sano? \end{comment} underline the current difficulties faced by the national health systems where on average, only two thousand people are treated yearly. They add that even though governamental programs have been ongoing for years now \ref{plan_naciona_chagas}, data on the issue is scarse or hardly accessible. This presents a real obstacle to ongoing research and coordination efforts to tackle the disease in the region.
 
 There exist different approaches in the literature that use mobile phone data to study epidemiological or health problems. \begin{comment} La siguiente info la saco de aqui  https://docs.google.com/document/d/1ZClgYFTLCxmg7wvRXqz2V1EP7Wcg0vd2ZwEBOLW2VOk \end{comment} Amy Wesolowski et al \ref{Wesolowski} quantify the impact of human mobility on Malaria disease movement in Kenya through disease prevalence information; Tizzoni et al \ref{Tizzoni} compare theoretical mobility models, models studied with Call Detail Records (CDRs), and mobility census data to infer 
 
