--- a/section_Introduction_Chagas_disease_is__.tex
+++ b/section_Introduction_Chagas_disease_is__.tex
@@ -10,11 +10,9 @@ The dynamic interaction of the triatomine infested areas and the human mobility 
 
 Recent national estimates indicate that there exist at least one million people carrying the parasite with more than seven million exposed. Experts \begin{comment}  aca como referencio a Diego Weinberg y Mundo Sano? \end{comment} underline the current difficulties faced by the national health systems where on average, only two thousand people are treated yearly. They add that even though governamental programs have been ongoing for years now \ref{plan_naciona_chagas}, data on the issue is scarse or hardly accessible. This presents a real obstacle to ongoing research and coordination efforts to tackle the disease in the region.
 
-There exist different approaches in the literature that use mobile phone data to study epidemiological or health problems. \begin{comment} La siguiente info la saco de aqui  https://docs.google.com/document/d/1ZClgYFTLCxmg7wvRXqz2V1EP7Wcg0vd2ZwEBOLW2VOk \end{comment} Amy Wesolowski et al \ref{Wesolowski} quantify the impact of human mobility on Malaria disease movement in Kenya through disease prevalence information; Tizzoni et al \ref{Tizzoni} compare theoretical mobility models, models studied with Call Detail Records (CDRs), and mobility census data to infer 
+There exist different approaches in the literature making use of mobile data applied epidemiological or health problems.\begin{comment} La siguiente info la saco de aqui  https://docs.google.com/document/d/1ZClgYFTLCxmg7wvRXqz2V1EP7Wcg0vd2ZwEBOLW2VOk \end{comment} Amy Wesolowski et al \ref{Wesolowski}  quantify the impact of human mobility on Malaria disease movement in Kenya with disease prevalence information; Tizzoni et al \ref{Tizzoni} compare different mobility modelling using theoretical approaches, available census data and models based on CDRs interactions to infer movements and compare all models studied with CDRs and mobility census data to infer
 
-Other works directly work on CDRs to characterize human mobility. Inferences patterns of daily flow 
-\footnote{A complete survey of mobile traffic analysis articles may be found in Fiore, Naboulsi, Ribot & Stanica's work \ref{mobile_survey} }are explored in sarraut
-
+Other works directly study CDRs to characterize human mobility and other sociodemographic information. \footnote{A complete survey of mobile traffic analysis articles may be found in Fiore, Naboulsi, Ribot & Stanica's work} Antenna usage is mostly explored in Sarraute et al. \ref{mobile_survey} to automatically detect large social-events in real time. Using the social graph to 
 
 
 Detail Record), también son utilizados para inferir propiedades y características sociales de
