--- a/section_Introduction_Chagas_disease_is__.tex
+++ b/section_Introduction_Chagas_disease_is__.tex
@@ -4,7 +4,7 @@ Chagas' disease is a tropical parasitic epidemic of global reach, spread mostly 
 
 Relevant routes of transmission also include blood transfusion and congenital transmission, estimating 1300 newborns infected each year \ref{trabajos_de_}.\begin{comment}  en el drive estan las ppt del min salud \end{comment}. The diseases endures chronically in the infected individual, lasting for years without being detected. This characteristic vastly reduces the chance of effective treatment and the tracking of infected individuals. Also, the spatial dissemination of a congenitally transmitted disease offsets the available measures to control risk groups and slowly introduces the disease to the general population. In this process, long-term human mobility plays a key role.
 
-In Argentina vector control campaigns have been ongoing for more than thirty years as the main epidemic counter-measure.The \textit{Gran Chaco}, situated in the northern part of the country, is home to most of the infected triatomines. The ecoregion's low socio-demographic conditions further supports the parasite's lifecycle, where human, bug and animal domestic interactions foster the appearance of new infection cases, particularly among the poorest. The ecoregion as of today is hyperendemic for the disease.
+In Argentina vector control campaigns have been ongoing for more than thirty years as the main epidemic counter-measure.The \textit{Gran Chaco}, situated in the northern part of the country, is home to most of the infected triatomines. The ecoregion's low socio-demographic conditions further supports the parasite's lifecycle, where domestic interactions between humans, triatomines and animals foster the appearance of new infection cases, particularly among the poorest. The ecoregion as of today is hyperendemic for the disease.
 
 The dynamic interaction of the triatomine infested areas and the human mobility patterns present a difficult scenario to track down individuals or spots with high prevalence of infected people or  transmission risk. Available methods of surveying the state of the Chagas disease in Argentina nowadays are limited to individual screenings of individuals. To the best of our knowledge the work described here is the first attempt to use mobile phone data to correlate migrations and cellphone usage to understand Chagas’ epidemic spatial structure.
 
