--- a/section_Data_sources_subsection_Argentina__.tex
+++ b/section_Data_sources_subsection_Argentina__.tex
@@ -3,6 +3,11 @@
 
 \subsection{Mexico}
 
-The data consists of more than six billion phone CDRs covering a period of 19 months from January 2014 to September 2015. Provided by one of Mexico's biggest telecommunication (TelCo) companies, the data provides details for more than 8 million users that accessed the TelCo's network at some time. Note that this also includes users from other TelCos having been contacted by own clients. In persepective, 
+The data consists of more than six billion phone CDRs covering a period of 19 months . Provided by one of Mexico's biggest telecommunication (TelCo) companies, the data provides details for more than  that accessed the TelCo's network at some time. Note that this also includes users from other TelCos having been contacted by own clients. In persepective, 
+
+The mexican data source is an anonymized dataset from a national mobile phone operator. Data is available for every call made within a period of 19 months from January 2014 to September 2015. The raw logs contain about 12 million calls per day for more than 8 million users that accessed the telecommunication company's (TelCo) network to place the call. This means that users from other TelCos are logged, as long as one of the users registering the call is a client of the operator. In practice, we only considered CDRs between TelCo users since geolocalization was only possible in this group.
+
+(EJEMPLO DE UNA TABLA DE DATOS CRUDOS?)
+
 
 % Si podemos reflotemos el grafico de clustering de provincias segun comunicaciones, y repitamos para estados en Mexico.
