--- a/section_Introduction_Chagas_disease_is__.tex
+++ b/section_Introduction_Chagas_disease_is__.tex
@@ -1,8 +1,8 @@
-\section{Introduction}
+o\section{Introduction}
 
 Chagas' disease is a tropical parasitic epidemic of global reach, spread mostly across Latin America. The World Health Organization (WHO \ref{http://www.who.int/mediacentre/factsheets/fs340/en/}) estimates more than six million infected people worldwide. Most transmissions occur in the Americas via the \textit{Trypanosoma cruzi} parasite, vector-borne by the \textit{Triatomine} insect family. In recent years and due to globalization and migrations, the disease has become a health issue in other continents, particularly in Europe. 
 
-Relevant routes of transmission also include blood transfusion and congenital transmission, estimating 1300 newborns infected each year \ref{trabajos_de_}.\begin{comment}  en el drive estan las ppt del min salud \end{comment}. The diseases endures chronically in the infected individual, lasting for years without being detected. This characteristic vastly reduces the chance of effective treatment and the tracking of infected individuals. Also, the spatial dissemination of a congenitally transmitted disease offsets the available measures to control risk groups and slowly introduces the disease to the general population. In this process, long-term human mobility plays a key role.
+Relevant routes of transmission also include blood transfusion and congenital transmission, estimating 1300 newborns infected each year \ref{trabajos_de_}.\begin{comment}  en el drive estan las ppt del min salud \end{comment}. The diseases endures chronically in the infected individual, lasting for years without being detected. This characteristic vastly reduces the chance of effective treatment and the tracking of infected individuals. Also, the spatial dissemination of a congenitally transmitted disease sidesteps the available measures to control risk groups and slowly introduces the disease to the general population. In this process, long-term human mobility plays a key role.
 
 In Argentina vector control campaigns have been ongoing for more than thirty years as the main epidemic counter-measure.The \textit{Gran Chaco}, situated in the northern part of the country, is home to most of the infected triatomines. The ecoregion's low socio-demographic conditions further supports the parasite's lifecycle, where domestic interactions between humans, triatomines and animals foster the appearance of new infection cases, particularly among the poorest. The ecoregion as of today is hyperendemic for the disease.
 
