--- a/section_Data_sources_subsection_Argentina__.tex
+++ b/section_Data_sources_subsection_Argentina__.tex
@@ -1,4 +1,9 @@
 \section{Data sources}
+
+As a general rule, privacy is assured by handling data in private servers and in identifying users with their hashed ID, with encryption keys managed exclusively by the TelCo.
+
+Other general characteristics are that data is timestamped and geolocalized by the position of the antenna used to place the call.
+
 \subsection{Argentina}
 
 \subsection{Mexico}
