--- a/section_Data_sources_As_a__.tex
+++ b/section_Data_sources_As_a__.tex
@@ -1,18 +1,19 @@
 \section{Data sources}
 
-As a general rule, privacy is assured by handling data in private servers and in identifying users with their hashed ID, with encryption keys managed exclusively by the TelCo.
+As a general rule, privacy is assured by handling data in private servers and by differentiating users by their hashed ID, with encryption keys managed exclusively by the TelCo.
 
-Other general characteristics are that data is timestamped and geolocalized by the position of the antenna used to place the call.
+Other general characteristics are that logs are timestamped and geolocalized by the position of the antenna used to place the call.
 
 \subsection{Argentina}
 
 \subsection{Mexico}
 
-The data consists of more than six billion phone CDRs covering a period of 19 months . Provided by one of Mexico's biggest telecommunication (TelCo) companies, the data provides details for more than  that accessed the TelCo's network at some time. Note that this also includes users from other TelCos having been contacted by own clients. In persepective, 
+The mexican data source is an anonymized dataset from a national mobile phone operator. Data is available for every call made within a period of 19 months from January 2014 to September 2015. The raw logs contain about 12 million calls per day for more than 8 million users that accessed the telecommunication company's (TelCo) network to place the call. This means that users from other TelCos are logged, as long as one of the users registering the call is a client of the operator. In practice, we only considered CDRs between TelCo users since geolocalization was only possible for this group.
 
-The mexican data source is an anonymized dataset from a national mobile phone operator. Data is available for every call made within a period of 19 months from January 2014 to September 2015. The raw logs contain about 12 million calls per day for more than 8 million users that accessed the telecommunication company's (TelCo) network to place the call. This means that users from other TelCos are logged, as long as one of the users registering the call is a client of the operator. In practice, we only considered CDRs between TelCo users since geolocalization was only possible in this group.
+(EJEMPLO DE UNA TABLA DE DATOS CRUDOS o simpleformat?)
 
-(EJEMPLO DE UNA TABLA DE DATOS CRUDOS?)
+Of the two datasets, long-term mobility can only be seen in Mexico. Users living in one region can be tested to their area of influence at least one year before. This opens the possibility of modeling the question as a supervised learning problem where a users's past 
+
 
 
 % Si podemos reflotemos el grafico de clustering de provincias segun comunicaciones, y repitamos para estados en Mexico.
